# argus

./: .gitignore  DESIGN.md  MAP.md  README.md  SHARED_INTERFACES.md  config.example.toml  pyproject.toml
src/argus/: __init__.py  board.html  cli.py  config.py  correlate.py  daemon.py  diffs.py  federation.py  models.py  notify.py  reducer.py  reply.py  store.py  timeline.py  tui.py
src/argus/ingest/: __init__.py  hooks.py  tmux.py  transcripts.py
tests/: conftest.py  test_cli.py  test_config.py  test_correlate.py  test_daemon.py  test_diffs.py  test_docs_consistency.py  test_federation.py  test_ingest_hooks.py  test_ingest_tmux.py  test_ingest_transcripts.py  test_models.py  test_notify.py  test_property_reducer.py  test_reducer.py  test_reply.py  test_store.py  test_timeline.py  test_tui.py
tests/fixtures/: README.md  blocked_session.jsonl  clean_session.jsonl  tool_heavy_session.jsonl
